--- a/project3/style.css
+++ b/project3/style.css
@@ -1,5 +1,12 @@
+
+html {
+    width:100%;
+    height:100% ;
+
+}
 body {
- 
+ width:100%;
+ height:100% ;
 background-color:turquoise;
 background-image: url("https://i.ibb.co/DCc0D3v/5.png");
 }
@@ -10,7 +17,111 @@ background-image: url("https://i.ibb.co/DCc0D3v/5.png");
     transform: rotate(90deg);
 }
 
-.planet1{
-    width: 100000px;
-    padding:10000px;
+
+
+.clear{
+
+    clear:both;
 }
+
+
+#comets {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 99999999999999999;
+    pointer-events: none;
+    font-size: 50px;
+    color: #fff;
+    text-shadow: 1px 2px 0 #000, 1px -2px 0 #000, -1px 2px 0 #000,
+      -1px -2px 0 #000, 2px 1px 0 #000, 2px -1px 0 #000, -2px 1px 0 #000,
+      -2px -1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+      -1px -1px 0 #000;
+    text-align: left;
+    overflow: hidden;
+  }
+  
+  #comets .comment {
+    position: absolute;
+    top: 1;
+    left: 100%;
+    width: 100%;
+    margin: 1;
+  
+    animation-name: textanime;
+    animation-duration: 10s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+    background-image: url(http://www.clker.com/cliparts/b/S/G/z/3/5/lemon-star-th.png);
+    background-position:center;
+    width: 12%;
+	height: 15%;
+    background-repeat:no-repeat;
+    text-align:center;
+   
+    
+   
+  }
+  
+  @-webkit-keyframes textanime {
+    0% {
+      left: 100%;
+   
+    }
+    100% {
+      left: -100%;
+      
+    }
+    
+  }
+  @keyframes textanime {
+    0% {
+      left: 100%;
+  
+    }
+
+    100% {
+      left: -100%;
+     
+    }
+  }
+  
+  #text{
+    border:0;
+    padding:10px;
+    font-size:1.3em;
+    font-family:Arial, sans-serif;
+    border:solid 1px #ccc;
+    margin:0 0 20px;
+    width:300px;
+    
+    
+  }
+  
+  .btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #f7f7f7;
+    border-left: solid 6px #ff7c5c;/*左線*/
+    color: #ff7c5c;/*文字色*/
+    font-weight: bold;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  }
+  .btn:active {
+    box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
+    transform: translateY(2px);
+  }
+
+  .planets1:hover {
+display:inline-flex;
+height:80px ;
+padding:2px;
+transform:rotate(-90deg)scale(90%);
+
+
+
+  }
