--- a/project2/style.css
+++ b/project2/style.css
@@ -30,3 +30,63 @@ font-size: 25px;
     right;
 font-size:20px;
 }
+body {
+    
+ 
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-bottom:  30px;
+  padding-top:10px;
+  
+  background: black;
+  margin-bottom:  20px;
+ color:white;
+  font-family: flegrei, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 25px;
+text-align: 
+   center;
+}
+
+.l1 {
+
+  display:inline-block;
+  border: dotted white;
+  border-width: 6px;
+  padding:20px;
+  margin:10px;
+}
+.l2 {
+
+  display:inline-block;
+  border: dotted white;
+  border-width: 6px;
+  padding:20px;
+  margin:10px;
+}
+.l3 {
+
+  display:inline-block;
+  border: dotted white;
+  border-width: 6px;
+  padding:20px;
+  margin:10px;
+}
+
+.l4 {
+
+  display:inline-block;
+  border: dotted white;
+  border-width: 6px;
+  padding:20px;
+  margin:10px;
+}
+.l5 {
+
+  display:inline-block;
+  border: dotted white;
+  border-width: 6px;
+  padding:20px;
+  margin:10px;
+}
